--- a/RisingSea/CategoriesSheaves.tex
+++ b/RisingSea/CategoriesSheaves.tex
@@ -1148,7 +1148,13 @@ Show that $\mathsf{Com}$ is an abelian category.
 \end{exer}
 %
 \begin{proof}
+We first show that it is additive. Given complexes $A^\bullet$ and $B^\bullet$, let $F,G : A^\bullet \to B^\bullet$, where $f^i,g^i : A^i \to B^i$. It is clear that their sum $F + G$ is also an element of $\hom(A^\bullet, B^\bullet)$, and that this operation is commutative. In addition, the identity element consists of the zero maps $A^i \to B^i$, and the inverse of $F$ is $-F$, so $\hom(A^\bullet, B^\bullet)$ is an abelian group. We next want to show that composition distributes. Let $F,G : A^\bullet \to B^\bullet$ and $\varphi : B^\bullet \to C^\bullet$. We want to show that $\varphi \circ (F + G) = \varphi \circ F + \varphi \circ G$. Since $\mathsf{Mod}_R$ is an abelian category, we know that it distributes ``pointwise," i.e. $\varphi^i \circ (f^i + g^i) = \varphi^i \circ f^i + \varphi^i + g^i$, so composition distributes. The same argument shows it for composing on the right. The zero object of this category is the $0$-chain. Finally, we want to show that all finite products exist. It is clear that the product of two complexes $A^\bullet$ and $B^\bullet$ is the product $A^\bullet \times B^\bullet$, where the modules are $A^i \times B^i$ and the maps are $f^i \times g^i$, which again forms a complex, so the category contains all finite products. 
 
+To show it is an abelian category, it will be useful to establish what kernels and cokernels are in this category. Let $\varphi : A^\bullet \to B^\bullet$, where the maps are denoted $f^i: A^i \to A^{i+1}$ and $g^i : B^i \to B^{i+1}$. We have that $\varphi$ is given by a collection of maps $\varphi^i : A^i \to B^i$. Then let $K^\bullet$ be the chain where $K^i = \ker\varphi^i$ and the maps $K^i \to K^{i+1}$ are the restrictions $f^i\big\vert_{K^i}$. Since the $f^{i+1} \circ f^i = 0$, it is clear that their restrictions also compose to $0$, so $K^\bullet$ indeed defines a complex. In addition, it comes equipped with a natural map $I : K^\bullet \to A^\bullet$, which is just the inclusion $K^i \hookrightarrow A^i$. Finally, since each of the $K^i$ is the kernel to $\varphi^i$, it is also clear that the composition $\varphi \circ I$ is equivalent to the $0$ map, so $K^\bullet$ is the kernel. A similar easy proof will show that the complex $C^\bullet$ given by $C^i = \coker \varphi^i = B^i / \im\varphi^i$ is the cokernel of the chain map $\varphi$, so our category contains all kernels and cokernels. In this category, the concept of monomorphism and epimorphism is equivalent to being injective/surjective at each $i$, in which case we can verify ``pointwise" that each monomorphism being the kernel of its cokernel (and the dual statement) due to the fact that the complexes are defined over an abelian category. Therefore, $\mathsf{Com}$ is an abelian category.
 \end{proof}
+%
+\begin{exer}
+Let $\varphi : A^\bullet \to B^\bullet$. Show that this induces a map $H^i(A^\bullet) \to H^i(B^\bullet)$, which defines a functor $\mathsf{Com} \to \mathscr{C}$.
+\end{exer}
 %
 \end{document}
